Tests/RunCMake/CMakePresets/EmptyPresetName-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/EmptyPresetName:
Error: @5,15: Invalid Preset Name
      "name": "",
              \^$
